--- a/template/product/style.css
+++ b/template/product/style.css
@@ -8,7 +8,7 @@ body{
     padding-bottom: 50px;
     margin-top: 50px;
     padding-top: 20px;
-    box-shadow: -2px -2px 18px black;
+    
 }
 #pro{
     font-size: 80px;
@@ -134,7 +134,7 @@ p{
     width: 50px;
     height: 50px;
     float:right;
-    background-image: url(./images/close.svg);
+    background-image: url(./images/close.png);
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -151,4 +151,9 @@ p{
     height: 550px;
     margin-left: auto;
     margin-right: auto;
+}
+@media (max-width : 850px){
+    .cardRow{
+        display: block;
+    }
 }
