--- a/product/style/style.css
+++ b/product/style/style.css
@@ -134,7 +134,7 @@ p{
     width: 50px;
     height: 50px;
     float:right;
-    background-image: url(./images/close.png);
+    background-image: url(../images/close.png);
     background-size:cover;
     background-position: center;
     background-repeat: no-repeat;
