--- a/static/css/index.css
+++ b/static/css/index.css
@@ -33,10 +33,10 @@ html {
   position: absolute;
   background: black;
   right: 0;
-  top: 0;
+  top: -3px;
   background-color: inherit;
   color: snow;
-  padding:  18px;
+  padding: 18px;
   border: none;
 }
 
@@ -120,7 +120,7 @@ html {
 }
 .sidepanel  {
   color: white;
-  opacity: 0.9;
+  opacity: 0.95;
   width: 0;
   position: fixed;
   z-index: 99;
@@ -149,7 +149,7 @@ html {
 .sidepanel a:hover {
 
   color: red;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.9);
 }
 
 .closebtn {
