--- a/template/gal.css
+++ b/template/gal.css
@@ -79,11 +79,12 @@ section::before,section::after {
   font-size: 42px;
   color: #8B0000;;
   background-color: rgba(0, 0, 0, 0.9);
+    text-decoration: none;
 }
 
 .closebtn {
   position: absolute;
-  top: 2px;
+  top: 0px;
   right: 15px;
   font-size: 42px;
   width: auto;
@@ -96,6 +97,33 @@ section::before,section::after {
 .closebtn:hover {
   font-size: 50px;
   color: white;
+}
+
+.botpanel{
+
+  overflow: auto;
+  border-top: 1px solid white;
+  opacity: 1;
+  z-index: 101;
+  background-color: black;
+  width: 100%;
+  height: 25px;
+  display: block;
+  overflow: hidden;
+  position: absolute;
+  opacity: 0.9;
+  color: snow;
+  font-size: 20px;
+  border-radius: 2px;
+  bottom: 0;
+  text-align: center;
+  transition: ease-in 100ms;
+}
+
+.botpanel:hover{
+
+    padding: 20px;
+    height: auto;
 }
 
 /* END OF GLOBAL SIDEPANEL */
