--- a/product/style/style.css
+++ b/product/style/style.css
@@ -16,10 +16,11 @@ body{
   font-size: 50px;
   border-radius: 2px;
   transition: 500ms;
+  text-decoration: none;
 }
 .topnav:hover {
   background-color: #3e85aa;
-
+  text-decoration: none;
 }
 
 
@@ -51,7 +52,7 @@ body{
   height: 250px;
   top: 0;
   right: 0;
-  background-color: red;
+  background-color: darkblue;
   overflow-x: hidden;
   transition: 100ms ease-out;
   padding-top: 60px;
@@ -72,7 +73,7 @@ body{
 
 .sidepanel a:hover {
   font-size: 42px;
-  color: #8B0000;;
+  color: darkblue;
   background-color: rgba(0, 0, 0, 0.9);
 }
 
@@ -182,6 +183,9 @@ body{
 }
 .card:hover{
     box-shadow: 2px 2px 12px grey, -2px -2px 12px grey;
+    height: 310px;
+    width: 300px;
+
 }
 .prodImg{
     background-size:cover;
@@ -255,7 +259,9 @@ p{
 #close{
     width: 50px;
     height: 50px;
-    float:right;
+    float:  right;
+    border: 1px solid red;
+    border-radius: 50px;
     background-image: url(../images/close.png);
     background-size:cover;
     background-position: center;
