--- a/template/gal.css
+++ b/template/gal.css
@@ -56,7 +56,7 @@ section::before,section::after {
   height: 250px;
   top: 0;
   right: 0;
-  background-color: red;
+  background-color: darkblue;
   overflow-x: hidden;
   transition: 100ms ease-out;
   padding-top: 60px;
@@ -77,9 +77,9 @@ section::before,section::after {
 
 .sidepanel a:hover {
   font-size: 42px;
-  color: #8B0000;;
+  color: darkblue;;
   background-color: rgba(0, 0, 0, 0.9);
-    text-decoration: none;
+  text-decoration: none;
 }
 
 .closebtn {
