--- a/template/gal.html
+++ b/template/gal.html
@@ -9,7 +9,7 @@
         <div class="topnav">
                 <div href="#">
                   <a href="../index.html">
-                      <img src="../static/assets/logo.png" alt="Frescamer" style="height:40px; margin-left: 15px; margin-top: 0px;">
+                      <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
                   </a>
 
                   <button class="openbtn" onclick="openNav()">☰</button>
@@ -59,7 +59,7 @@
     <div id="food-menu" class="light-wrapper">
 
         <div class="container inner">
-        /*<h2 class="kidu"></h2>
+        <h2 class="kidu"></h2>
 
                         <div class="row">
                 <div class="col-sm-3 col-md-3">
@@ -112,6 +112,7 @@
         <!-- /.container -->
 
     </div>
+
 
 
 </body>
