--- a/product/style/style.css
+++ b/product/style/style.css
@@ -9,7 +9,7 @@ body{
   background-color: #2d89ef;
   width: 100%;
   opacity: 0.75;
-  max-height: 75px;
+  height: 100px;
   display: inline-block;
   overflow: hidden;
   color: white;
@@ -25,12 +25,11 @@ body{
 
 
 .openbtn {
-  font-size: 20px;
+  font-size: 48px;
   cursor: pointer;
   position: absolute;
   background: black;
   right: 0;
-  top: -3px;
   background-color: inherit;
   color: snow;
   padding: 18px;
@@ -38,7 +37,12 @@ body{
 }
 .openbtn:hover {
   transition: ease-in 200ms;
-  background-color: black;
+  color:blue;
+}
+
+.logo{
+  height:85px; margin-left: 15px; margin-top: 5px;
+
 }
 
 
@@ -69,6 +73,7 @@ body{
   text-decoration: none;
   display: block;
   transition: 100ms ease-in;
+  padding-bottom: 10px;
 }
 
 .sidepanel a:hover {
@@ -96,29 +101,30 @@ body{
 
 .botpanel{
 
-  overflow: auto;
+
   border-top: 1px solid white;
-  opacity: 1;
   z-index: 101;
   background-color: black;
   width: 100%;
-  height: 25px;
-  display: block;
-  overflow: hidden;
-  position: absolute;
+  height: 120px;
+
+
+
   opacity: 0.9;
   color: snow;
   font-size: 20px;
   border-radius: 2px;
+   /* position: absolute; Comment this if page has scroll. */
   bottom: 0;
+  left: 0;
+
   text-align: center;
   transition: ease-in 100ms;
 }
 
 .botpanel:hover{
 
-    padding: 20px;
-    height: auto;
+    height: 220px;
 }
 
 /* END OF GLOBAL SIDEPANEL */
@@ -134,7 +140,7 @@ body{
 
 }
 #pro{
-    font-size: 80px;
+    font-size: 60px;
     margin:0px;
     text-align: center;
     font-family: 'Montserrat', sans-serif;
@@ -280,8 +286,38 @@ p{
     margin-left: auto;
     margin-right: auto;
 }
-@media (max-width : 850px){
+@media (max-width : 767px){
     .cardRow{
         display: block;
     }
+
+    .topnav {
+      z-index: 50;
+      width: 100%;
+      height: 80px;
+    }
+    .topnav:hover {
+      background-color: #3e85aa;
+
+    }
+
+    .logo{
+      height:50px; margin-left: 15px; margin-top: 10px;
+
+    }
+    .openbtn {
+      opacity: 0.8;
+      font-size: 40px;
+      cursor: pointer;
+      position: absolute;
+      background: black;
+      right: 0;
+      top: -3px;
+      background-color: inherit;
+      color: snow;
+      padding: 18px;
+      border: none;
+    }
+
+
 }
