--- a/static/css/index.css
+++ b/static/css/index.css
@@ -4,7 +4,7 @@ html {
   height: 100%;
   width:  100%;
   margin: 0;
-  overflow: hidden;
+  overflow-x: hidden;
   z-index: 0;
   word-wrap: break-word;
 }
@@ -25,6 +25,8 @@ html {
   background-size: 100% 100%;
   filter: blur(8px);
   -webkit-filter: blur(8px);
+  overflow: hidden;
+  max-height: 100%;
 }
 
 /* Global Website Stuff - Top Panel and side Panel */
@@ -35,7 +37,7 @@ html {
   background-color: #2d89ef;
   width: 100%;
   opacity: 0.75;
-  max-height: 75px;
+  height: 75px;
   display: inline-block;
   overflow: hidden;
   color: white;
@@ -48,13 +50,19 @@ html {
 
 }
 
+.logo{
+  height: 60px; margin-left: 15px; margin-top: 5px;
+
+}
+
 .openbtn {
-  font-size: 20px;
+  opacity: 0.8;
+  font-size: 40px;
   cursor: pointer;
   position: absolute;
   background: black;
-  right: 0;
-  top: -3px;
+  right: 2px;
+  top: -7px;
   background-color: inherit;
   color: snow;
   padding: 18px;
@@ -62,7 +70,7 @@ html {
 }
 .openbtn:hover {
   transition: ease-in 200ms;
-  background-color: black;
+  color: red;
 }
 
 
@@ -77,7 +85,7 @@ html {
   top: 0;
   right: 0;
   background-color: darkblue;
-  background-color: red; /* I still think red is better */ 
+  background-color: red; /* I still think red is better */
   overflow-x: hidden;
   transition: 100ms ease-out;
   padding-top: 60px;
@@ -119,7 +127,6 @@ html {
   color: white;
 }
 
-
 .botpanel{
 
   overflow: auto;
@@ -128,7 +135,7 @@ html {
   z-index: 101;
   background-color: black;
   width: 100%;
-  height: 25px;
+  height: 120px;
   display: block;
   overflow: hidden;
   position: absolute;
@@ -136,15 +143,14 @@ html {
   color: snow;
   font-size: 20px;
   border-radius: 2px;
-  bottom: 0;
+  bottom: -95px;
   text-align: center;
   transition: ease-in 100ms;
 }
 
 .botpanel:hover{
 
-    padding: 20px;
-    height: auto;
+    height: 220px;
 }
 
 /* END OF GLOBAL SIDEPANEL */
@@ -161,7 +167,7 @@ html {
 .slides{
 
   max-width: 100%;
-  height: auto; /* Make this == "auto%" if you want to maintain aspect ratio and not to fill page */
+  height: 100%; /* Make this == "auto%" if you want to maintain aspect ratio and not to fill page */
   position: absolute;
   z-index: 0;
   display: inline-block;
@@ -179,6 +185,8 @@ html {
     display: block;
     display: inline-block;
     vertical-align: middle;
+    overflow: hidden;
+    max-height: 100%;
 }
 
 .slides > div{    /* The text box*/
@@ -261,4 +269,37 @@ html {
 
 .display-right:hover{
     margin-right: -3px;
+}
+
+
+@media (max-width:767px) {
+  .topnav {
+    z-index: 50;
+    width: 100%;
+    height: 80px;
+  }
+  .topnav:hover {
+    background-color: #3e85aa;
+
+  }
+
+  .logo{
+    height:50px; margin-left: 15px; margin-top: 10px;
+
+  }
+  .openbtn {
+    opacity: 0.8;
+    font-size: 40px;
+    cursor: pointer;
+    position: absolute;
+    background: black;
+    right: 0;
+    top: -3px;
+    background-color: inherit;
+    color: snow;
+    padding: 18px;
+    border: none;
+  }
+
+
 }
