--- a/contact/style/order.css
+++ b/contact/style/order.css
@@ -6,60 +6,72 @@ html {
 
 }
 
-.topnav {
-  overflow: auto;
-  background-color: #2d89ef;
+.page-body{
+  background-color: black;
+  position: relative;
+  height: 100%;
   width: 100%;
-  height: 70px;
+  top: 0px;
+  left: 0;
+}
+
+/* Global Website Stuff - Top Panel and side Panel */
+
+.topnav {
+  z-index: 100;
+  background-color: darkcyan;
+  width: 100%;
+  padding: 4px 0px 0px 0px;
+  position: fixed;
+  top: 0%;
+  /* opacity: 0.75; */
   display: inline-block;
   overflow: hidden;
   color: white;
   font-size: 50px;
-  border-radius: 2px;
+  /* border-radius: 2px; */
+  transition: 500ms;
 }
+/* .topnav:hover {
+  background-color: #3e85aa;
 
+} */
 
+.logo{
+  height: 60px; margin-left: 15px; margin-top: 5px;
 
-.page-body{
-    background-color: black;
-    position: relative;
-    height: 100%;
-    width: 100%;
-    top: 0px;
-    left: 0;
 }
-
 
 .openbtn {
-  font-size: 20px;
+  /* opacity: 0.8; */
+  font-size: 30px;
   cursor: pointer;
-  /* background-color: #618BEC; */
   position: absolute;
   background: black;
-  right: 0;
-  top: 0;
+  right: 8px;
+  top: 16px;
   background-color: inherit;
-  color: white;
-  padding:  25px;
+  color: snow;
   border: none;
-
 }
-
 .openbtn:hover {
-
-  background-color: black;
+  font-size: 35px;
+  transition: ease-in 100ms;
+  color: white;
 }
+
+
 
 .sidepanel  {
   color: white;
   opacity: 0.95;
   width: 0;
   position: fixed;
-  z-index: 99;
+  z-index: 101;
   height: 250px;
   top: 0;
   right: 0;
-  background-color: red;
+  background-color: black;
   overflow-x: hidden;
   transition: 100ms ease-out;
   padding-top: 60px;
@@ -80,18 +92,30 @@ html {
 
 .sidepanel a:hover {
   font-size: 42px;
-  color: #8B0000;;
-  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  background-color: darkcyan;
 }
 
-.sidepanel .closebtn {
+.closebtn {
   position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
+  color: white;
+  top: 4px;
+  right: 15px;
+  font-size: 42px;
+  width: auto;
+  text-align: center;
+  background-color: inherit;
+  border: 0px;
+  transition: ease-in 100ms;
+  margin-bottom: 20px;
 }
 
+.closebtn:hover {
+  font-size: 50px;
+  color: darkcyan;
+}
 
+/* END OF GLOBAL SIDEPANEL */
 .scroll_btn{
 
     height: 50px;
