--- a/static/css/index.css
+++ b/static/css/index.css
@@ -29,26 +29,29 @@ html {
   max-height: 100%;
 }
 
+
+
 /* Global Website Stuff - Top Panel and side Panel */
 
 
 .topnav {
-  z-index: 50;
-  background-color: #2d89ef;
+  z-index: 100;
+  background-color: darkcyan;
   width: 100%;
-  opacity: 0.75;
-  height: 75px;
+  height: auto;
+  padding: 4px 0px 0px 0px;
+  position: fixed;
   display: inline-block;
   overflow: hidden;
   color: white;
   font-size: 50px;
-  border-radius: 2px;
+  /* border-radius: 2px; */
   transition: 500ms;
 }
-.topnav:hover {
+/* .topnav:hover {
   background-color: #3e85aa;
 
-}
+} */
 
 .logo{
   height: 60px; margin-left: 15px; margin-top: 5px;
@@ -56,21 +59,21 @@ html {
 }
 
 .openbtn {
-  opacity: 0.8;
-  font-size: 40px;
+  /* opacity: 0.8; */
+  font-size: 30px;
   cursor: pointer;
   position: absolute;
   background: black;
-  right: 2px;
-  top: -7px;
+  right: 8px;
+  top: 16px;
   background-color: inherit;
   color: snow;
-  padding: 18px;
   border: none;
 }
 .openbtn:hover {
-  transition: ease-in 200ms;
-  color: red;
+  font-size: 35px;
+  transition: ease-in 100ms;
+  color: white;
 }
 
 
@@ -80,12 +83,11 @@ html {
   opacity: 0.95;
   width: 0;
   position: fixed;
-  z-index: 99;
+  z-index: 101;
   height: 250px;
   top: 0;
   right: 0;
-  background-color: darkblue;
-  background-color: red; /* I still think red is better */
+  background-color: black;
   overflow-x: hidden;
   transition: 100ms ease-out;
   padding-top: 60px;
@@ -106,13 +108,14 @@ html {
 
 .sidepanel a:hover {
   font-size: 42px;
-  color: #8B0000;;
-  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  background-color: darkcyan;
 }
 
 .closebtn {
   position: absolute;
-  top: 2px;
+  color: white;
+  top: 4px;
   right: 15px;
   font-size: 42px;
   width: auto;
@@ -120,101 +123,95 @@ html {
   background-color: inherit;
   border: 0px;
   transition: ease-in 100ms;
+  margin-bottom: 20px;
 }
 
 .closebtn:hover {
   font-size: 50px;
-  color: white;
+  color: darkcyan;
 }
 
-.botpanel{
 
-  overflow: auto;
-  border-top: 1px solid white;
-  opacity: 1;
-  z-index: 101;
-  background-color: black;
-  width: 100%;
-  height: 120px;
-  display: block;
-  overflow: hidden;
-  position: absolute;
-  opacity: 0.9;
-  color: snow;
-  font-size: 20px;
-  border-radius: 2px;
-  bottom: -95px;
-  text-align: center;
-  transition: ease-in 100ms;
-}
 
-.botpanel:hover{
-
-    height: 220px;
-}
 
 /* END OF GLOBAL SIDEPANEL */
 
 
 
 
+.botpanel{
 
-
+  /* overflow: auto; */
+  z-index: 0;
+  background-color: white;
+  width: 100%;
+  height: auto;
+  display: inline-block;
+  position: absolute;
+  color: black;
+  font-size: 20px;
+  top: 100%;
+  
+  /* text-align: center; */
+}
+.botpanel p {
+  padding: 0px 20px 50px 20px;
+}
+.botpanel h1 {
+  padding: 0px 20px 0px 20px;
+}
 
 
 
 
 .slides{
 
-  max-width: 100%;
+  width: 100%;
   height: 100%; /* Make this == "auto%" if you want to maintain aspect ratio and not to fill page */
   position: absolute;
   z-index: 0;
   display: inline-block;
   overflow: hidden;
-  margin-top: -5px;
+  margin-top: -4px;
+  
+
 }
 
 .slides > img{    /* The slide image */
-    min-width: 100vw;
-    min-height: 75vh;
     overflow: hidden;
-    margin: auto;
-    height: auto;
-    opacity: 0.75;
     display: block;
-    display: inline-block;
-    vertical-align: middle;
-    overflow: hidden;
-    max-height: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    
+    height: 100%;
+    width: 100%;
+
+    object-fit: cover;
 }
 
 .slides > div{    /* The text box*/
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(15, 15, 15, 0.8);
 
-    overflow: hidden;
-    font-size: 26px;
+    /* overflow: hidden; */
+    font-size: 25px;
     color: white;
-    padding: 15px;
-    width: 30%;
+    padding-top: 10px;
+    padding-bottom: 18px;
+    width: 100%;
     height: auto;
-    max-height: 30%;
-    min-height: 50px;
-    display: table-cell;
-    border: 1px solid grey;
-    z-index: 100;
-    vertical-align: middle;
-    position: absolute;
-    left: 50%;
-    top: 40%;
-    margin-bottom: 20px;
-    margin-left: -15%;    /* Position of the box */
+    /* min-height: auto; */
+    /* display: table-cell; */
+    z-index: 10;
+    position: inherit;
+    bottom: 0%;
+    margin-left: auto;
+    margin-right: auto;
     text-align: center;
     transition: ease-in 100ms;
 
 }
 
-.slides >div:hover{
+/* .slides >div:hover{
     max-height: 35%;
     width: 35% ;
     margin-left: -18%;
@@ -222,24 +219,26 @@ html {
     background: rgba(0, 0, 0, 0.8);
     border: 2px solid white;
 
-}
+} */
 
 
 
 
 .scroll_btn{
     position: absolute;
-    height: 200px;
+    height: 100px;
     width: 50px;
     background: rgba(0, 0, 0, 0.5);
-    color: grey;
+    color: white;
     border: 0px solid black;
-    margin-top: -125px;
+    margin-top: auto;
+    margin-bottom: auto;
     transition: ease-in 300ms;
+    font-size: 1.8em; 
 }
 
 .scroll_btn:hover{
-    font-size: 42px;
+    font-size: 2.2em;
     color: white;
     border: 1px solid white;
 
@@ -272,11 +271,11 @@ html {
 }
 
 
-@media (max-width:767px) {
+@media (max-width: 767px) {
   .topnav {
-    z-index: 50;
+    z-index: 0;
     width: 100%;
-    height: 80px;
+    height: 10%;
   }
   .topnav:hover {
     background-color: #3e85aa;
@@ -288,17 +287,21 @@ html {
 
   }
   .openbtn {
-    opacity: 0.8;
-    font-size: 40px;
+    /* opacity: 0.8; */
+    font-size: 30px;
     cursor: pointer;
     position: absolute;
     background: black;
     right: 0;
-    top: -3px;
+    margin: 0px 4px 4px 4px;
     background-color: inherit;
     color: snow;
     padding: 18px;
     border: none;
+  }
+  .openbtn:hover{
+    
+    font-size: 35px;
   }
 
 
