--- a/template/gal.css
+++ b/template/gal.css
@@ -1,7 +1,7 @@
 body {
-    font-family:'Kreon',serif;
+    /* font-family:'Kreon',serif;
     -webkit-font-smoothing:antialiased;
-    -webkit-text-size-adjust:100%;
+    -webkit-text-size-adjust:100%; */
 }
 img {
     max-height:100%;
@@ -22,8 +22,50 @@ section::before,section::after {
 
 
 
-/* Global sidepanel */
+/* Global Website Stuff - Top Panel and side Panel */
 
+.topnav {
+  z-index: 100;
+  background-color: darkcyan;
+  width: 100%;
+  padding: 4px 0px 0px 0px;
+  position: fixed;
+  top: 0%;
+  /* opacity: 0.75; */
+  display: inline-block;
+  overflow: hidden;
+  color: white;
+  font-size: 50px;
+  /* border-radius: 2px; */
+  transition: 500ms;
+}
+/* .topnav:hover {
+  background-color: #3e85aa;
+
+} */
+
+.logo{
+  height: 60px; margin-left: 15px; margin-top: 5px;
+
+}
+
+.openbtn {
+  /* opacity: 0.8; */
+  font-size: 30px;
+  cursor: pointer;
+  position: absolute;
+  background: black;
+  right: 8px;
+  top: 16px;
+  background-color: inherit;
+  color: snow;
+  border: none;
+}
+.openbtn:hover {
+  font-size: 35px;
+  transition: ease-in 100ms;
+  color: white;
+}
 
 
 
@@ -32,11 +74,11 @@ section::before,section::after {
   opacity: 0.95;
   width: 0;
   position: fixed;
-  z-index: 99;
+  z-index: 101;
   height: 250px;
   top: 0;
   right: 0;
-  background-color: darkblue;
+  background-color: black;
   overflow-x: hidden;
   transition: 100ms ease-out;
   padding-top: 60px;
@@ -57,14 +99,14 @@ section::before,section::after {
 
 .sidepanel a:hover {
   font-size: 42px;
-  color: darkblue;;
-  background-color: rgba(0, 0, 0, 0.9);
-  text-decoration: none;
+  color: white;
+  background-color: darkcyan;
 }
 
 .closebtn {
   position: absolute;
-  top: 0px;
+  color: white;
+  top: 4px;
   right: 15px;
   font-size: 42px;
   width: auto;
@@ -72,31 +114,12 @@ section::before,section::after {
   background-color: inherit;
   border: 0px;
   transition: ease-in 100ms;
+  margin-bottom: 20px;
 }
 
 .closebtn:hover {
   font-size: 50px;
-  color: white;
-}
-
-.botpanel{
-
-  border-top: 1px solid white;
-  z-index: 101;
-  background-color: black;
-  width: 100%;
-  height: 120px;
-  opacity: 0.9;
-  color: snow;
-  font-size: 20px;
-   /* position: absolute; Comment this if page has scroll. */
-  text-align: center;
-  transition: ease-in 100ms;
-}
-
-.botpanel:hover{
-
-    height: 220px;
+  color: darkcyan;
 }
 
 /* END OF GLOBAL SIDEPANEL */
@@ -162,45 +185,6 @@ section::before,section::after {
 
 
 
-
-.topnav {
-
-    background-color: #2d89ef;
-    width: 100%;
-    height: 100px;
-
-
-    color: white;
-    font-size: 50px;
-    border-radius: 2px;
-  }
-
-  .openbtn {
-    font-size: 40px;
-    cursor: pointer;
-    /* background-color: #618BEC; */
-    position: absolute;
-    right: 0;
-    top: 0;
-    background-color: inherit;
-    color: white;
-    padding:  25px;
-    border: none;
-
-  }
-
-  .openbtn:hover {
-    font-size: 40px;
-    color: blue;
-    
-
-  }
-
-
-  .logo{
-    height: 80px; margin-left: 15px; margin-top: 5px;
-
-  }
 
   .kidu{
       font-size: 100px;
