--- a/template/gal.html
+++ b/template/gal.html
@@ -1,119 +1,138 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Gallery</title>
   <link rel="stylesheet" type="text/css" href="gal.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  </head>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+</head>
+
 <body>
-        <div class="topnav">
-                <div href="#">
-                  <a href="../index.html">
-                      <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
-                  </a>
-
-                  <button class="openbtn" onclick="openNav()">☰</button>
-
-                </div>
-
-   <div id="mySidepanel" class="sidepanel">
-              <button href="javascript:void(0)" class="closebtn" onclick="closeNav()" style="font-size:42px; width: auto; text-align: center; border: 0px;">×</button>
-              <a href="../index.html">Home</a>
-              <a href="../product/index.html">Products</a>
-              <a href="#">Recipes</a>
-              <a href="#">Contact Us</a>
-              <a href="#">Services</a>
-              <a href="#">Store Finder</a>
-              <a href="#">Gallery</a>
+  <div class="topnav">
+    <div href="#">
+      <a href="../index.html">
+        <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
+      </a>
+      <button class="openbtn" onclick="openNav()">☰</button>
     </div>
+  </div>
+  <div id="mySidepanel" class="sidepanel">
+    <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
+    <a href="../index.html">Home</a>
+    <a href="../product/index.html">Products</a>
+    <a href="../recipe/index.html">Recipes</a>
+    <a href="../contact/contact.html">Contact Us</a>
+    <a href="#">Services</a>
+    <a href="#">Store Finder</a>
+    <a href="../template/gal.html">Gallery</a>
+
+  </div>
     <script>
-            function openNav() {
-              document.getElementById("mySidepanel").style.width = "350px";
+      function openNav() {
+        document.getElementById("mySidepanel").style.width = "350px";
 
-            }
+      }
 
-            function closeNav() {
-              document.getElementById("mySidepanel").style.width = "0";
-            }
+      function closeNav() {
+        document.getElementById("mySidepanel").style.width = "0";
+      }
 
 
-            var slideIndex = 1; // Initially set the index to 1
-            showDivs(slideIndex);
+      var slideIndex = 1; // Initially set the index to 1
+      showDivs(slideIndex);
 
-            function plusDivs(n) {
-              showDivs(slideIndex += n);
-            }
+      function plusDivs(n) {
+        showDivs(slideIndex += n);
+      }
 
-            function showDivs(n) {
-              var i;
-              var x = document.getElementsByClassName("slides");    // Put all slideshow elements inside same class name "slides".
-              if (n > x.length) {slideIndex = 1}
-              if (n < 1) {slideIndex = x.length}
-              for (i = 0; i < x.length; i++) {
-                x[i].style.display = "none";
-              }
-              x[slideIndex-1].style.display = "block";
-            }
+      function showDivs(n) {
+        var i;
+        var x = document.getElementsByClassName("slides");    // Put all slideshow elements inside same class name "slides".
+        if (n > x.length) { slideIndex = 1 }
+        if (n < 1) { slideIndex = x.length }
+        for (i = 0; i < x.length; i++) {
+          x[i].style.display = "none";
+        }
+        x[slideIndex - 1].style.display = "block";
+      }
 
-      </script>
+    </script>
     <div id="food-menu" class="light-wrapper">
 
-        <div class="container inner">
+      <div class="container inner">
         <h2 class="kidu"></h2>
 
-                        <div class="row">
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/hot-drinks.png" alt="Hot Drinks"></div>
-                    <div class="menu-titles"><h1 class="">Hot drinks</h1></div>
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/ice-drinks.png" alt="Ice Drinks"></div>
-                    <div class="menu-titles"><h1 class="">Ice drinks</h1></div>
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/smoothies.png" alt="Smoothies"></div>
-                    <div class="menu-titles"><h1 class="">Smoothies</h1></div>
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/deserts.png" alt="Deserts"></div>
-                    <div class="menu-titles"><h1 class="">Deserts</h1></div>
-
-                </div>
+        <div class="row">
+          <div class="col-sm-3 col-md-3">
+            <div class="menu-images "><img src="img/menu/hot-drinks.png" alt="Hot Drinks"></div>
+            <div class="menu-titles">
+              <h1 class="">Hot drinks</h1>
             </div>
 
-            <div class="row">
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/cocktails.png" alt="Hot Drinks"></div>
-                    <div class="menu-titles"><h1 class="">Cocktails</h1></div>
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/beer.png" alt="Ice Drinks"></div>
-                    <div class="menu-titles"><h1 class="">Beer</h1></div>
-
-                    </div>
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/wine.png" alt="Smoothies"></div>
-                    <div class="menu-titles"><h1 class="">Wine</h1></div>
-
-                </div>
-                <div class="col-sm-3 col-md-3">
-                    <div class="menu-images "><img src="img/menu/sprites.png" alt="Deserts"></div>
-                    <div class="menu-titles"><h1 class="">Sprites</h1></div>
-
-                </div>
+          </div>
+          <div class="col-sm-3 col-md-3">
+            <div class="menu-images "><img src="img/menu/ice-drinks.png" alt="Ice Drinks"></div>
+            <div class="menu-titles">
+              <h1 class="">Ice drinks</h1>
             </div>
+
+          </div>
+          <div class="col-sm-3 col-md-3">
+            <div class="menu-images "><img src="img/menu/smoothies.png" alt="Smoothies"></div>
+            <div class="menu-titles">
+              <h1 class="">Smoothies</h1>
+            </div>
+
+          </div>
+          <div class="col-sm-3 col-md-3">
+            <div class="menu-images "><img src="img/menu/deserts.png" alt="Deserts"></div>
+            <div class="menu-titles">
+              <h1 class="">Deserts</h1>
+            </div>
+
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-3 col-md-3">
+            <div class="menu-images "><img src="img/menu/cocktails.png" alt="Hot Drinks"></div>
+            <div class="menu-titles">
+              <h1 class="">Cocktails</h1>
+            </div>
+
+          </div>
+          <div class="col-sm-3 col-md-3">
+            <div class="menu-images "><img src="img/menu/beer.png" alt="Ice Drinks"></div>
+            <div class="menu-titles">
+              <h1 class="">Beer</h1>
+            </div>
+
+          </div>
+        </div>
+        <div class="col-sm-3 col-md-3">
+          <div class="menu-images "><img src="img/menu/wine.png" alt="Smoothies"></div>
+          <div class="menu-titles">
+            <h1 class="">Wine</h1>
+          </div>
 
         </div>
-        <!-- /.container -->
+        <div class="col-sm-3 col-md-3">
+          <div class="menu-images "><img src="img/menu/sprites.png" alt="Deserts"></div>
+          <div class="menu-titles">
+            <h1 class="">Sprites</h1>
+          </div>
+
+        </div>
+      </div>
 
     </div>
+    <!-- /.container -->
+
+  </div>
 
 
 
 </body>
+
 </html>
