--- a/template/gal.html
+++ b/template/gal.html
@@ -1,23 +1,40 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <title>Gallery</title>
-  <link rel="stylesheet" type="text/css" href="gal.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-    integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-</head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
 
+  <!-- css -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+  <link rel="stylesheet" href="css/font-awesome.min.css">
+
+
+  <!-- google font -->
+  <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Kreon:300,400,700'>
+
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  
+  <script type="text/javascript" src="static/js/index.js"></script>
+  </head>
 <body>
-  <div class="topnav">
-    <div href="#">
-      <a href="../index.html">
-        <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
-      </a>
-      <button class="openbtn" onclick="openNav()">☰</button>
+  <div class="container">
+    <div class="topnav">
+        <div>
+            <a href="#">
+                <img src="../static/assets/logo.png" alt="Frescamer" class="logo">
+            </a>
+            <button class="openbtn" onclick="openNav()">☰</button>
+
+        </div>
+
     </div>
-  </div>
-  <div id="mySidepanel" class="sidepanel">
+</div>
+
+<div id="mySidepanel" class="sidepanel">
     <button href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</button>
     <a href="../index.html">Home</a>
     <a href="../product/index.html">Products</a>
@@ -27,112 +44,67 @@
     <a href="#">Store Finder</a>
     <a href="../template/gal.html">Gallery</a>
 
-  </div>
-    <script>
-      function openNav() {
-        document.getElementById("mySidepanel").style.width = "350px";
-
-      }
-
-      function closeNav() {
-        document.getElementById("mySidepanel").style.width = "0";
-      }
-
-
-      var slideIndex = 1; // Initially set the index to 1
-      showDivs(slideIndex);
-
-      function plusDivs(n) {
-        showDivs(slideIndex += n);
-      }
-
-      function showDivs(n) {
-        var i;
-        var x = document.getElementsByClassName("slides");    // Put all slideshow elements inside same class name "slides".
-        if (n > x.length) { slideIndex = 1 }
-        if (n < 1) { slideIndex = x.length }
-        for (i = 0; i < x.length; i++) {
-          x[i].style.display = "none";
-        }
-        x[slideIndex - 1].style.display = "block";
-      }
-
-    </script>
+</div>
     <div id="food-menu" class="light-wrapper">
+        <section class="ss-style-top"></section>
+        <div class="container inner">
+            <h2 class="section-title text-center">gallery</h2>
 
-      <div class="container inner">
-        <h2 class="kidu"></h2>
+                        <div class="row">
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                  <!--  <div class="menu-titles"><h1 class="">Hot drinks</h1></div> -->
 
-        <div class="row">
-          <div class="col-sm-3 col-md-3">
-            <div class="menu-images "><img src="img/menu/hot-drinks.png" alt="Hot Drinks"></div>
-            <div class="menu-titles">
-              <h1 class="">Hot drinks</h1>
+                </div>
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                  <!--  <div class="menu-titles"><h1 class="">Ice drinks</h1></div>-->
+
+                </div>
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                <!--    <div class="menu-titles"><h1 class="">Smoothies</h1></div>-->
+
+                </div>
+
+
+
+              <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                </div>
+
+                </div>
+                <div class="row">
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                <!--    <div class="menu-titles"><h1 class="">Cocktails</h1></div>-->
+
+                </div>
+
+
+
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                <!--    <div class="menu-titles"><h1 class="">Beer</h1></div>-->
+
+                    </div>
+
+
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                <!--    <div class="menu-titles"><h1 class="">Wine</h1></div>-->
+                  </div>
+
+
+                <div class="col-sm-3 col-md-3">
+                    <div class="menu-images "><img src="img/pis.jpg" alt="image not found"></div>
+                  <!--  <div class="menu-titles"><h1 class="">Sprites</h1></div>-->
+
+                </div>
             </div>
-
-          </div>
-          <div class="col-sm-3 col-md-3">
-            <div class="menu-images "><img src="img/menu/ice-drinks.png" alt="Ice Drinks"></div>
-            <div class="menu-titles">
-              <h1 class="">Ice drinks</h1>
-            </div>
-
-          </div>
-          <div class="col-sm-3 col-md-3">
-            <div class="menu-images "><img src="img/menu/smoothies.png" alt="Smoothies"></div>
-            <div class="menu-titles">
-              <h1 class="">Smoothies</h1>
-            </div>
-
-          </div>
-          <div class="col-sm-3 col-md-3">
-            <div class="menu-images "><img src="img/menu/deserts.png" alt="Deserts"></div>
-            <div class="menu-titles">
-              <h1 class="">Deserts</h1>
-            </div>
-
-          </div>
         </div>
-
-        <div class="row">
-          <div class="col-sm-3 col-md-3">
-            <div class="menu-images "><img src="img/menu/cocktails.png" alt="Hot Drinks"></div>
-            <div class="menu-titles">
-              <h1 class="">Cocktails</h1>
-            </div>
-
-          </div>
-          <div class="col-sm-3 col-md-3">
-            <div class="menu-images "><img src="img/menu/beer.png" alt="Ice Drinks"></div>
-            <div class="menu-titles">
-              <h1 class="">Beer</h1>
-            </div>
-
-          </div>
         </div>
-        <div class="col-sm-3 col-md-3">
-          <div class="menu-images "><img src="img/menu/wine.png" alt="Smoothies"></div>
-          <div class="menu-titles">
-            <h1 class="">Wine</h1>
-          </div>
-
-        </div>
-        <div class="col-sm-3 col-md-3">
-          <div class="menu-images "><img src="img/menu/sprites.png" alt="Deserts"></div>
-          <div class="menu-titles">
-            <h1 class="">Sprites</h1>
-          </div>
-
-        </div>
-      </div>
 
     </div>
-    <!-- /.container -->
-
-  </div>
-
-
-
 </body>
-
 </html>
