--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,12 +1,14 @@
-body,
+body{
+  margin: 0%;
+}
 html {
-  background-color: black;
+  /* background-color: black;
   height: 100%;
   width:  100%;
   margin: 0;
   overflow-x: hidden;
   z-index: 0;
-  word-wrap: break-word;
+  word-wrap: break-word; */
 }
 
 
@@ -31,110 +33,7 @@ html {
 
 
 
-/* Global Website Stuff - Top Panel and side Panel */
 
-
-.topnav {
-  z-index: 100;
-  background-color: darkcyan;
-  width: 100%;
-  height: auto;
-  padding: 4px 0px 0px 0px;
-  position: fixed;
-  display: inline-block;
-  overflow: hidden;
-  color: white;
-  font-size: 50px;
-  /* border-radius: 2px; */
-  transition: 500ms;
-}
-/* .topnav:hover {
-  background-color: #3e85aa;
-
-} */
-
-.logo{
-  height: 60px; margin-left: 15px; margin-top: 5px;
-
-}
-
-.openbtn {
-  /* opacity: 0.8; */
-  font-size: 30px;
-  cursor: pointer;
-  position: absolute;
-  background: black;
-  right: 8px;
-  top: 16px;
-  background-color: inherit;
-  color: snow;
-  border: none;
-}
-.openbtn:hover {
-  font-size: 35px;
-  transition: ease-in 100ms;
-  color: white;
-}
-
-
-
-.sidepanel  {
-  color: white;
-  opacity: 0.95;
-  width: 0;
-  position: fixed;
-  z-index: 101;
-  height: 250px;
-  top: 0;
-  right: 0;
-  background-color: black;
-  overflow-x: hidden;
-  transition: 100ms ease-out;
-  padding-top: 60px;
-  height: 100%;
-}
-
-.sidepanel a {
-  padding: 8px 8px 8px 32px;
-  width: 100%;
-  text-decoration: none;
-  font-size: 30px;
-  color:white;
-  border: 1px black;
-  text-decoration: none;
-  display: block;
-  transition: 100ms ease-in;
-}
-
-.sidepanel a:hover {
-  font-size: 42px;
-  color: white;
-  background-color: darkcyan;
-}
-
-.closebtn {
-  position: absolute;
-  color: white;
-  top: 4px;
-  right: 15px;
-  font-size: 42px;
-  width: auto;
-  text-align: center;
-  background-color: inherit;
-  border: 0px;
-  transition: ease-in 100ms;
-  margin-bottom: 20px;
-}
-
-.closebtn:hover {
-  font-size: 50px;
-  color: darkcyan;
-}
-
-
-
-
-/* END OF GLOBAL SIDEPANEL */
 
 
 
@@ -272,37 +171,18 @@ html {
 
 
 @media (max-width: 767px) {
-  .topnav {
-    z-index: 0;
+
+  .slides{
+
     width: 100%;
-    height: 10%;
-  }
-  .topnav:hover {
-    background-color: #3e85aa;
-
-  }
-
-  .logo{
-    height:50px; margin-left: 15px; margin-top: 10px;
-
-  }
-  .openbtn {
-    /* opacity: 0.8; */
-    font-size: 30px;
-    cursor: pointer;
+    height: 50%; 
     position: absolute;
-    background: black;
-    right: 0;
-    margin: 0px 4px 4px 4px;
-    background-color: inherit;
-    color: snow;
-    padding: 18px;
-    border: none;
-  }
-  .openbtn:hover{
+    top: 80px;
+    z-index: 0;
+    display: inline-block;
+    overflow: hidden;
+    /* margin-top: -4px; */
     
-    font-size: 35px;
+  
   }
-
-
 }
