--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,14 +1,7 @@
 body{
   margin: 0%;
-}
-html {
-  /* background-color: black;
-  height: 100%;
-  width:  100%;
-  margin: 0;
-  overflow-x: hidden;
-  z-index: 0;
-  word-wrap: break-word; */
+  width: 100%;
+  height: auto;
 }
 
 
@@ -72,9 +65,8 @@ html {
   display: inline-block;
   overflow: hidden;
   margin-top: -4px;
-  
-
 }
+
 
 .slides > img{    /* The slide image */
     overflow: hidden;
@@ -132,42 +124,38 @@ html {
     border: 0px solid black;
     margin-top: auto;
     margin-bottom: auto;
-    transition: ease-in 300ms;
+    transition: ease-in 100ms;
     font-size: 1.8em; 
+    top: 50%;
 }
 
 .scroll_btn:hover{
-    font-size: 2.2em;
+    font-size: 2.5em;
     color: white;
-    border: 1px solid white;
 
 }
 
 .display-left{
 
     left: 0px;
-    margin-left: -15px;
-    position: absolute;
-    top: 50vh;
+    margin-left: 0px;
 }
 
-.display-left:hover{
+/* .display-left:hover{
 
     margin-left: -3px;
-}
+} */
 
 .display-right{
 
-    margin-right: -15px;
+    margin-right: 0px;
     right: 0px;
-    position: absolute;
-    top: 50vh;
 }
 
 
-.display-right:hover{
+/* .display-right:hover{
     margin-right: -3px;
-}
+} */
 
 
 @media (max-width: 767px) {
@@ -175,14 +163,79 @@ html {
   .slides{
 
     width: 100%;
-    height: 50%; 
+    height: 60%; 
     position: absolute;
     top: 80px;
     z-index: 0;
     display: inline-block;
     overflow: hidden;
     /* margin-top: -4px; */
-    
-  
   }
+
+  .slides > img{    /* The slide image */
+    overflow: hidden;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    
+    /* height: 100%;
+    width: 100%; */
+
+    object-fit: cover;
+  }
+
+  .slides > div{    /* The text box*/
+    position: absolute;
+    background: rgba(15, 15, 15, 0.8);
+
+    /* overflow: hidden; */
+    font-size: 1.2em;
+    color: white;
+    width: 100%;
+    height: fit-content;
+    /* min-height: auto; */
+    /* display: table-cell; */
+    z-index: 10;
+    position: inherit;
+    bottom: 15%;
+    text-align: center;
+    transition: ease-in 100ms;
+
+  }
+
+  .scroll_btn{
+    position: absolute;
+    height: 50px;
+    width: 50px;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: 0px solid black;
+    margin-top: auto;
+    margin-bottom: auto;
+    transition: ease-in 100ms;
+    font-size: 1.8em; 
+    top: 35%;
+}
+
+  .scroll_btn:hover{
+    font-size: 1.8em;
+  }
+
+  .botpanel{
+
+    /* overflow: auto; */
+    z-index: 0;
+    background-color: white;
+    width: 100%;
+    height: auto;
+    display: inline-block;
+    position: absolute;
+    color: black;
+    font-size: 20px;
+    top: 60%;
+    
+    /* text-align: center; */
+  }
+
+
 }
