--- a/static/assets/global.css
+++ b/static/assets/global.css
@@ -1,5 +1,9 @@
 /* Global Website Stuff - Top Panel and side Panel */
 
+body {
+    margin: 0%;
+    width: 100%;
+}
 
 .topnav {
     z-index: 100;
@@ -15,41 +19,41 @@
     font-size: 50px;
     /* border-radius: 2px; */
     transition: 500ms;
-  }
-  /* .topnav:hover {
+}
+
+
+/* .topnav:hover {
     background-color: #3e85aa;
   
   } */
-  
-  .logo{
-    height: 60px; 
-    margin-left: 15px; 
+
+.logo {
+    height: 60px;
+    margin-left: 15px;
     margin-bottom: 5px;
     vertical-align: middle;
-  
-  }
-  
-  .openbtn {
+}
+
+.openbtn {
     /* opacity: 0.8; */
     font-size: 30px;
     cursor: pointer;
     position: absolute;
     background: black;
-    right: 8px;
+    right: 12px;
     top: 16px;
     background-color: inherit;
     color: white;
     border: none;
-  }
-  .openbtn:hover {
+}
+
+.openbtn:hover {
     font-size: 35px;
     transition: ease-in 100ms;
     color: white;
-  }
-  
-  
-  
-  .sidepanel  {
+}
+
+.sidepanel {
     color: white;
     opacity: 0.85;
     width: 0;
@@ -63,28 +67,28 @@
     transition: 100ms ease-out;
     padding-top: 75px;
     height: 100%;
-  }
-  
-  .sidepanel a {
+}
+
+.sidepanel a {
     padding: 8px 8px 8px 32px;
     width: 100%;
     text-decoration: none;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 25px;
-    color:white;
+    color: white;
     border: 1px black;
     text-decoration: none;
     display: block;
     transition: 100ms ease-in;
-  }
-  
-  .sidepanel a:hover {
+}
+
+.sidepanel a:hover {
     /* font-size: 28px; */
     color: white;
     background-color: darkcyan;
-  }
-  
-  .closebtn {
+}
+
+.closebtn {
     position: absolute;
     color: white;
     top: 10px;
@@ -96,45 +100,45 @@
     border: 0px;
     transition: ease-in 100ms;
     /* margin-bottom: 20px;  */
-  }
-  
-  .closebtn:hover {
+}
+
+.closebtn:hover {
     font-size: 50px;
     color: darkcyan;
-  }
-  
-  
+}
+
+
 /*MOBILE VIEW*/
-@media (max-width : 767px){
 
+@media (max-width: 767px) {
     .topnav {
-      z-index: 50;
-      width: 100%;
-      height: 80px;
+        z-index: 50;
+        width: 100%;
+        height: 65px;
+        padding: 0;
     }
-    .logo{
-      height:50px; margin-left: 15px; margin-top: 10px;
-
+    .logo {
+        height: 50px;
+        margin-left: 10px;
+        margin-top: 3px;
     }
     .openbtn {
-      opacity: 0.8;
-      margin-top: 24px;
-      margin-bottom: 13px;
-      margin-right: 13px;
-      font-size: 24px;
-      cursor: pointer;
-      position: absolute;
-      background: black;
-      right: 0;
-      top: 0;
-      background-color: transparent;
-      color: snow;
-      padding: 0px;
-      border: none;
+        opacity: 0.8;
+        margin-top: 16px;
+        margin-bottom: 13px;
+        margin-right: 13px;
+        font-size: 24px;
+        cursor: pointer;
+        position: absolute;
+        background: black;
+        right: 0;
+        top: 0;
+        background-color: transparent;
+        color: snow;
+        padding: 0px;
+        border: none;
     }
-    .openbtn:hover{
-      font-size: 24px;
+    .openbtn:hover {
+        font-size: 24px;
     }
-
-
 }
