--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,88 +1,83 @@
-body{
-  margin: 0%;
-  width: 100%;
-  height: auto;
+body,
+html {
+    margin: 0%;
+    width: 100%;
+    height: 100%;
 }
 
-
-.blur-background{
-
-  background-color: black;
-  opacity: 0.4;
-  height: 100%;
-  min-width: 100%;
-  width: auto;
-  position: absolute;
-  left:0;
-  top: 0;;
-  z-index: 0;
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
-  overflow: hidden;
-  max-height: 100%;
+.container {
+    height: 100%;
+    position: relative;
 }
 
-
-
-
-
-
-
-
-.botpanel{
-
-  /* overflow: auto; */
-  z-index: 0;
-  background-color: white;
-  width: 100%;
-  height: auto;
-  display: inline-block;
-  position: absolute;
-  color: black;
-  font-size: 20px;
-  top: 100%;
-  
-  /* text-align: center; */
+.blur-background {
+    background-color: black;
+    opacity: 0.4;
+    height: 100%;
+    min-width: 100%;
+    width: auto;
+    position: absolute;
+    left: 0;
+    top: 0;
+    ;
+    z-index: 0;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+    overflow: hidden;
+    max-height: 100%;
 }
+
+.botpanel {
+    /* overflow: auto; */
+    z-index: 0;
+    background-color: white;
+    width: 100%;
+    height: 50vh;
+    display: inline-block;
+    position: absolute;
+    color: black;
+    font-size: 20px;
+    top: 100%;
+    font-family: 'Montserrat', sans-serif;
+    /* text-align: center; */
+}
+
 .botpanel p {
-  padding: 0px 20px 50px 20px;
+    padding: 0px 20px 50px 20px;
 }
+
 .botpanel h1 {
-  padding: 0px 20px 0px 20px;
+    padding: 0px 20px 0px 20px;
 }
 
-
-
-
-.slides{
-
-  width: 100%;
-  height: 100%; /* Make this == "auto%" if you want to maintain aspect ratio and not to fill page */
-  position: absolute;
-  z-index: 0;
-  display: inline-block;
-  overflow: hidden;
-  margin-top: -4px;
+.slides {
+    width: 100%;
+    height: 100vh;
+    /* Make this == "auto%" if you want to maintain aspect ratio and not to fill page */
+    position: absolute;
+    z-index: 0;
+    display: inline-block;
+    overflow: hidden;
+    margin-top: -4px;
 }
 
-
-.slides > img{    /* The slide image */
+.slides>img {
+    /* The slide image */
     overflow: hidden;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    
     height: 100%;
     width: 100%;
-
     object-fit: cover;
 }
 
-.slides > div{    /* The text box*/
+.slides>div {
+    /* The text box*/
     background: rgba(15, 15, 15, 0.8);
-
+    font-family: 'Montserrat', sans-serif;
     /* overflow: hidden; */
     font-size: 25px;
     color: white;
@@ -99,8 +94,8 @@ body{
     margin-right: auto;
     text-align: center;
     transition: ease-in 100ms;
-
 }
+
 
 /* .slides >div:hover{
     max-height: 35%;
@@ -112,10 +107,7 @@ body{
 
 } */
 
-
-
-
-.scroll_btn{
+.scroll_btn {
     position: absolute;
     height: 100px;
     width: 50px;
@@ -125,117 +117,96 @@ body{
     margin-top: auto;
     margin-bottom: auto;
     transition: ease-in 100ms;
-    font-size: 1.8em; 
+    font-size: 1.8em;
     top: 50%;
 }
 
-.scroll_btn:hover{
+.scroll_btn:hover {
     font-size: 2.5em;
     color: white;
-
 }
 
-.display-left{
-
+.display-left {
     left: 0px;
     margin-left: 0px;
 }
+
 
 /* .display-left:hover{
 
     margin-left: -3px;
 } */
 
-.display-right{
-
+.display-right {
     margin-right: 0px;
     right: 0px;
 }
 
-
-/* .display-right:hover{
-    margin-right: -3px;
-} */
-
-
 @media (max-width: 767px) {
-
-  .slides{
-
-    width: 100%;
-    height: 60%; 
-    position: absolute;
-    top: 80px;
-    z-index: 0;
-    display: inline-block;
-    overflow: hidden;
-    /* margin-top: -4px; */
-  }
-
-  .slides > img{    /* The slide image */
-    overflow: hidden;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    
-    /* height: 100%;
+    .slides {
+        width: 100%;
+        height: 60%;
+        position: absolute;
+        top: 65px;
+        z-index: 0;
+        display: inline-block;
+        overflow: hidden;
+        /* margin-top: -4px; */
+    }
+    .slides>img {
+        /* The slide image */
+        overflow: hidden;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        /* height: 100%;
     width: 100%; */
-
-    object-fit: cover;
-  }
-
-  .slides > div{    /* The text box*/
-    position: absolute;
-    background: rgba(15, 15, 15, 0.8);
-
-    /* overflow: hidden; */
-    font-size: 1.2em;
-    color: white;
-    width: 100%;
-    height: fit-content;
-    /* min-height: auto; */
-    /* display: table-cell; */
-    z-index: 10;
-    position: inherit;
-    bottom: 15%;
-    text-align: center;
-    transition: ease-in 100ms;
-
-  }
-
-  .scroll_btn{
-    position: absolute;
-    height: 50px;
-    width: 50px;
-    background: rgba(0, 0, 0, 0.5);
-    color: white;
-    border: 0px solid black;
-    margin-top: auto;
-    margin-bottom: auto;
-    transition: ease-in 100ms;
-    font-size: 1.8em; 
-    top: 35%;
-}
-
-  .scroll_btn:hover{
-    font-size: 1.8em;
-  }
-
-  .botpanel{
-
-    /* overflow: auto; */
-    z-index: 0;
-    background-color: white;
-    width: 100%;
-    height: auto;
-    display: inline-block;
-    position: absolute;
-    color: black;
-    font-size: 20px;
-    top: 60%;
-    
-    /* text-align: center; */
-  }
-
-
+        object-fit: cover;
+    }
+    .slides>div {
+        /* The text box*/
+        position: absolute;
+        background: rgba(15, 15, 15, 0.8);
+        /* overflow: hidden; */
+        font-size: 1.2em;
+        color: white;
+        width: 100%;
+        height: fit-content;
+        /* min-height: auto; */
+        /* display: table-cell; */
+        z-index: 10;
+        position: inherit;
+        bottom: 11%;
+        text-align: center;
+        transition: ease-in 100ms;
+    }
+    .scroll_btn {
+        position: absolute;
+        height: 50px;
+        width: 50px;
+        background: rgba(0, 0, 0, 0.5);
+        color: white;
+        border: 0px solid black;
+        margin-top: auto;
+        margin-bottom: auto;
+        transition: ease-in 100ms;
+        font-size: 1.8em;
+        top: 35%;
+    }
+    .scroll_btn:hover {
+        font-size: 1.8em;
+    }
+    .botpanel {
+        /* overflow: auto; */
+        z-index: 0;
+        background-color: white;
+        width: 100%;
+        height: 100vh;
+        display: inline-block;
+        position: absolute;
+        color: black;
+        font-size: 20px;
+        top: 60%;
+        /* text-align: center; */
+    }
 }
